# rocky-code-agent

./: README.md
backend/: app.py  pyproject.toml  requirements.txt
backend/src/backend/: .env  system_message.md
backend/src/backend/components/: inference.py
backend/src/backend/components/tools/: tool_schema.py
backend/src/backend/components/tools/bash/: description.md  tool.py
backend/src/backend/components/tools/read_file/: description.md  tool.py
backend/src/backend/components/tools/web_fetch/: description.md  tool.py
backend/src/backend/components/tools/web_search/: description.md  tool.py
backend/src/backend/components/tools/write_file/: description.md  tool.py
